# Firmware-CLI

./: .env.example  .gitignore  README.md  build_plan_spec_gaps.md  build_release.py  env.example  firmware_agent_build_plan_concrete (3).md  firmware_agent_build_plan_concrete (5).md  firmware_agent_build_plan_concrete (7).md  firmware_agent_build_plan_concrete (8).md  firmware_agent_build_plan_concrete (9).md  firmware_agent_mcp_architecture.md  host_bootstrap.md  host_bootstrap.py  init.md  mcp_tools.md  nrf_recover.py  nrf_recovery.py  pyocd_debug_mcp.md  pyproject.toml  setup_host.md  setup_host.ps1  setup_host.sh  stage0_check.md  stage0_check.py  stage0_setup.md
.claude/commands/: build.md  fix-bug.md  review.md  spec-loop.md  specs.md  test-suite.md  write-process.md
.claude/skills/: README.md  install_skills.ps1  install_skills.sh  skills.manifest  sync_references.ps1  sync_references.sh
boards/: example_custom_board.yaml  example_custom_nrf52_board.yaml  nrf52833dk.yaml  nrf52840dk.yaml  nucleo_l476rg.yaml
firmware/: README.md
firmware/nrf52833dk/: README.md
firmware/nrf52840dk/: README.md
firmware/nucleo_l476rg/: README.md
firmware/nucleo_l476rg/bugs/b004__dual_signal_regression/src/: CMakeLists.txt
firmware/nucleo_l476rg/bugs/b004__dual_signal_regression/src/src/: main.c
markdowns/: R-12-P-change-explanations  R-12_P_Explanations.md  R12_P_SPLIT.md  ROADMAP.md  UXLayer.md  build-plan-r12-addendum.md  build-plan-r12v2-addendum.md  build_plan_spec_gaps.md  current-progress.md  firmware_agent_build_plan_concrete (10).md  firmware_agent_build_plan_concrete (9).md  firmware_agent_mcp_architecture.md  r11_benchmark_spec.md  repo_file_index.md  stage0_check_tool.md  things-to-change-entry-14-skill-surfaces.md  things-to-change.md
markdowns/curr/: README.md  branch-a-b-additive-merge_spec.md  branch-a-deployment-suite_spec.md  branch-a-live-provider-hardware-suite_process.md  branch-a-live-provider-hardware-suite_review.md  branch-a-live-provider-hardware-suite_spec.md  branch-a-strict-provider-recovery_process.md  branch_c_test_plan.md  canonical-memory-layer_spec.md  cli_distribution_spike_spec.md  compact-tool-schema-index-codex-smoke-task.txt  model-native-skill-loading-codex-smoke-task.txt  next-codex-handoff-20260630.md  next-codex-handoff-20260701-wave1-final-audit.md  p-wave-a-ab-final-readiness_review.md  p-wave-abc-merge-validation_review.md  p-wave-abc-merge-validation_spec.md  p-wave-c-markdown-code-map.md  p0-0-doc-sync-superpowers-audit_spec.md  p0-0-static-audit-fix_spec.md  p0-wave0-main-reconcile_process.md  p0-wave0-main-reconcile_spec.md  p0_foundation_process.md  p_wave_a_chat_handoff_2026_06_28.md  p_wave_a_merge_benphaseb_review.md  portability-playbook-suite_spec.md  post-bootstrap-portability-contract_process.md  post-bootstrap-portability-contract_review.md  post-bootstrap-portability-contract_spec.md  pyright-baseline-cleanup_process.md  r10_contract.md  r11_benchmark_spec.md  r12-ben-mainline-merge_process.md  r12-branch-a-live-provider-status.md  r12-branch-b-action-boundary_review.md  r12-branch-b-action-boundary_spec.md  r12-branch-b-full-deployment-completion_spec.md  r12-branch-b-official-portability-closure_spec.md  r12-branch-b-status.md  r12-branch-c-completion_process.md  (+57 more)
markdowns/tmp/: R12JasonBenMerge.md  audit_and_validation_plan.md  build_plan_spec_gaps.md  mcp_tools.md  (+5 more)
merge/: R12JasonBenMerge.md
packs/: .gitignore  README.md  manifest.yaml
runs/: README.md
scratch/: .gitignore  README.md  api_target_control_harness.py
skills/: README.md
superpowers/: agent_coding_guidelines.md  agent_coding_playbook.md  agent_consistency_playbook.md  agent_doc_sync_playbook.md  agent_index_START_HERE.md  agent_portability_playbook.md  agent_script_doc_playbook.md  spec_build_review_loop_playbook.md
tests/: README.md  __init__.py  test_board_configs.py  test_branch_c_harness.py  test_host_bootstrap.py  test_model_native_skills.py  test_p0_foundation.py  test_pack_index_repair.py  test_pack_provision.py  test_probe_inventory.py  test_provider_native_skill_usage_harness.py  test_provider_native_skills.py  test_r10_runtime.py  test_r11_benchmark.py  test_r12_turnkey.py  test_r12_turnkey_benchmark.py  test_r12_turnkey_merge.py  test_r12_turnkey_playbooks.py  test_reference_artifacts.py  test_serial_resolver.py  test_server_board_config.py  test_server_import.py  test_server_runtime_tools.py  test_stage0_shared_errors.py  test_symbols.py  test_target_control.py  test_timeout_policy.py  test_turnkey.py  test_uart_capture.py  test_ux_cli.py  test_zephyr_build.py
(+284 files in other folders)
