[project]
name = "pyocd-debug-mcp"
version = "0.1.0"
description = "MCP server exposing embedded debug, flash, and inspection control via pyOCD"
requires-python = ">=3.10"          # hard floor set by the MCP Python SDK (pyOCD itself only needs 3.8+)
license = { text = "Apache-2.0" }

dependencies = [
    "anthropic>=0.96.0",           # official Anthropic SDK for the optional Claude API provider
    "rich>=13.9.0",                # operator-facing pretty CLI rendering for the R12 UX layer
    "mcp[cli]>=1.2.0",              # official MCP Python SDK; [cli] pulls in the `mcp` dev/inspector tooling
    "openai>=2.0.0",               # official OpenAI SDK for the R12 turnkey brain
    "prompt_toolkit>=3.0.48",      # interactive REPL shell for the operator-facing UX layer
    "httpx>=0.27",                 # deterministic pack provisioning + live-index repair downloads
    "pyocd>=0.44.0",               # Cortex-M debug/flash/inspection; current stable is 0.44.1
    "pyserial>=3.5",               # serial-port discovery and UART smoke checks
    "pyyaml>=6.0",                 # YAML board-config loading
    "python-dotenv>=1.0",          # repo-local .env auto-loading for Phase A tools
]

[project.scripts]
pyocd-debug-mcp = "pyocd_debug_mcp.server:main"
pyocd-debug-brain = "pyocd_debug_mcp.brain.cli:main"
pyocd-debug = "pyocd_debug_mcp.ux.cli:main"
pyocd-pack-repair = "pyocd_debug_mcp.pack_index_repair:main"
pyocd-zephyr-build = "pyocd_debug_mcp.zephyr_build:main"

# PEP 735 dependency groups — installed by `uv sync` (default) and excluded from the published wheel.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",        # the MCP server handlers are async
    "ruff>=0.6",                   # lint + format
    "mypy>=1.10",                  # type checking
    "debugpy>=1.8",                # optional: remote-attach debugging of the server itself
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyocd_debug_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"tests/cases" = "src/pyocd_debug_mcp/_runtime_data/benchmark/cases"
"skills" = "src/pyocd_debug_mcp/_runtime_data/skills"
"playbooks/turnkey" = "src/pyocd_debug_mcp/_runtime_data/playbooks/turnkey"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
